--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -30,6 +30,8 @@ jobs:
   scrape:
     runs-on: ubuntu-latest
     timeout-minutes: 360  # 6 hours max
+    permissions:
+      contents: write  # Allow pushing commits
     
     steps:
     - name: Checkout repository
