Fix: Ensure scraped data is always committed even if scraper encounters errors
Changed commit step condition from 'if: success()' to 'if: always()' so data is preserved

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -89,7 +89,7 @@ jobs:
         python scripts/scraper.py --stats
     
     - name: Commit scraped data
-      if: success()
+      if: always()
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
