--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -115,7 +115,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: scraped-data-backup
+        name: scraped-data
         path: data/forums/net54/
         retention-days: 30
     
